# jackcwf

./: .dockerignore  .env  .env.ci  .env.example  .env.monitoring.example  .gitignore  4GB_DEPLOYMENT_READINESS_REPORT.md  ANALYSIS_REPORT.md  ARCHITECTURE_ANALYSIS.md  BACKEND_FRONTEND_ANALYSIS.md  BACKEND_IMPLEMENTATION_COMPLETE.md  CLAUDE.md  CODE_AUDIT_REPORT.md  CODE_FILES_SUMMARY.md  CONTAINER_STARTUP_DIAGNOSTIC_ANALYSIS.md  COOLIFY_CONFIG.md  COOLIFY_DEPLOYMENT_GUIDE.md  CURRENT_STATUS.md  DELIVERY_SUMMARY.md  DEPLOYMENT_DIAGNOSIS.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_QUICK_REFERENCE.md  DEPLOYMENT_SUMMARY.md  DEV_STARTUP_TROUBLESHOOTING.md  DOCKER_404_DIAGNOSTIC_AND_FIX.md  Dockerfile  Dockerfile.prod  Dockerfile.reflex.old  EPIC2_COMPLETION_SUMMARY.md  EPIC_1_COMPLETION_REPORT.md  EPIC_1_EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_SPECIFICATION_CREATED.md  FILE_UPLOAD_ERROR_ANALYSIS.md  FILE_UPLOAD_FIXES_SUMMARY.md  FINAL_REPORT.md  FIXES_APPLIED_SUMMARY.md  GEMINI.md  GETTING_STARTED_5_MINUTES.py  GITHUB_PUSH_ACTION_PLAN.md  (+65 more)
.claude/: output-rules.json
.gemini/: settings.json
.github/: dependabot.yml
.github.backup/: CODEOWNERS  pull_request_template.md
.github.backup/workflows/: cd.yml  ci.yml  pre-commit.yml
.github/workflows/: build-and-deploy-4gb.yml  build-and-deploy.yml  cd.yml  ci.yml  pre-commit.yml  security.yml
.specify/: GETTING_STARTED.md  README.md  SYNC_IMPACT_REPORT.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env.example  .env.production  .env.test  .gitignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml  start-backend.sh
backend/examples/: memori_integration_example.py
backend/migrations/: env.py
backend/migrations/versions/: 000_add_data_sources_table.py  001_add_file_uploads_table.py  002_add_file_metadata_table.py  002_add_memori_memory_tables.py
backend/src/: main.py
backend/src/api/: __init__.py  datasources.py  file_preview.py  file_uploads.py  memory.py
backend/src/db/: __init__.py  base.py  config.py
backend/src/memory/: __init__.py  config.py  manager.py
backend/src/models/: __init__.py  database_connection.py  datasource.py  datasource_config.py  file_metadata.py  file_upload.py  schema.py
backend/src/services/: __init__.py  cache.py  claude_integration.py  csv_parser.py  datasource_service.py  encryption.py  excel_parser.py  file_upload_service.py  file_validation.py  postgres.py
backend/tests/: test_memory_integration.py  test_models.py
backend/tests/integration/: test_datasource_api.py  test_file_models.py  test_file_preview_api.py  test_file_upload_api.py  test_memori_integration.py
backend/tests/unit/: test_postgres.py
code_review_crew/: .env
config/: REDIS_POSTGRESQL_4GB_CONFIG.md
config/prometheus/: prometheus.yml
config/redis/: redis.conf
deployment/: README.md  docker-compose.ha.yml  quick-start.sh
deployment/kubernetes/: all-in-one.yml
deployment/monitoring/: docker-compose.monitoring.yml
deployment/scripts/: deploy-ha.sh  health-check.sh
deployment/traefik/: traefik.yml
docker/: docker-entrypoint.sh  nginx.conf  nginx.optimized.conf  supervisord.conf
docs/: AI_OPTIMIZATION_QUICK_START.md  AI_PERFORMANCE_OPTIMIZATION_ROADMAP.md  BACKEND_FRONTEND_READINESS_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DOCKER_ARCHITECTURE_DECISION.md  EPIC1_ARCHITECTURE_DESIGN.md  EPIC1_IMPLEMENTATION_GUIDE.md  EPIC1_IMPLEMENTATION_ROADMAP.md  EPIC1_INDEX.md  EPIC1_SUMMARY.md  EPIC_1_ASSESSMENT.md  LANGCHAIN_DEVELOPMENT_INDEX.md  LANGCHAIN_QUICK_START.md  LANGCHAIN_RAG_INTEGRATION_COMPLETE.md  LANTERN_PERFORMANCE_ANALYSIS.md  PHASE_1_COMPLETION_REPORT.md  POSTGRESQL_DEPLOYMENT_GUIDE.md  PROJECT_COMPLETION_REPORT.md  PYTHON314_VS_AI_OPTIMIZATION_ANALYSIS.md  PYTHON_3_14_UPGRADE_ANALYSIS.md  PYTHON_PERFORMANCE_BENCHMARK.md  PYTHON_UPGRADE_CHECKLIST.md  README.md  README_EPIC1.md  SECURE_DATABASE_SETUP.md  SECURITY_REPORT.md  STAGING_VALIDATION_CHECKLIST.md
docs/architecture/: ARCHITECTURE_DIAGRAMS.md  DELIVERY_CHECKLIST.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  README.md
docs/archived/: PHASE_2_COMPLETION_REPORT.md  PHASE_3_FINAL_REPORT.md  PHASE_3_PROGRESS.md  PHASE_3_TEST_REPORT.md  PHASE_4_DAY2_REPORT.md  PUSH_TO_GITHUB.md  QUICK_COMMANDS.txt  SSH_QUICK_VISUAL.md
docs/deployment/: 00_START_HERE.md  4GB_DEPLOYMENT_CI_CD_ANALYSIS.md  4GB_DEPLOYMENT_GUIDE.md  4GB_DEPLOYMENT_RISK_ASSESSMENT.md  4GB_DEPLOYMENT_VERIFICATION_CHECKLIST.md  CDN_DEPLOYMENT_CHECKLIST.md  CDN_IMPLEMENTATION_SUMMARY.md  CDN_INTEGRATION_GUIDE.md  INDEX.md  (+56 more)
frontend/: .env.development  .env.example  .env.production  .env.test  .eslintrc.json  .gitignore  API_INTEGRATION_SUMMARY.md  E2E_TESTING_GUIDE.md  PERFORMANCE_REPORT.md  README.md  STORY_4.2_MILESTONE_M2_SIGN_OFF.md  W1D2_3_STORY_4_1_COMPLETION_SUMMARY.md  generate-test-token.py  index.html  package-lock.json  package.json  playwright.config.ts  progress.md  start-frontend.sh  tailwind.config.js  vite.config.optimized.ts  vite.config.ts  vitest.config.ts
monitoring/: LIGHTWEIGHT_LOGGING_4GB.md  README.md
scripts/: README.md  build.sh  coolify-deploy.sh  dev.sh  git_security_audit.py  sync-frontend-to-github.sh  test-docker.sh  validate_env.py  verify-optimizations.sh  verify-secrets.sh
src/: __init__.py  exceptions.py  main.py
test-results/: integration_test_report_20251111_225119.html  test_file_20251111_225119.csv  upload_response_20251111_223822.json  upload_response_20251111_224330.json  upload_response_20251111_225119.json
tests/: README.md  conftest.py  load_test_cache.py  load_test_simple.py  phase2_streaming_validation.py  phase3_claude_cache_validation.py  test_content_blocks.py  test_epic2_comprehensive.py  test_performance_optimization.py  test_story31_validation.py  test_story32_conversation_endpoints.py  test_story32_document_endpoints.py  test_story32_message_websocket.py  test_story33_e2e_integration.py  test_story33_performance.py  validate_story31.py  validate_story32.py
working/: __main__.py  health.py  working.py
(+475 files in other folders)
